--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html,
 body {
     height: 100%;
     width: 100%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,4 +27,15 @@ body {
     padding: 10px 20px;
     background-color: red;
     cursor: pointer;
+}
+
+.element {
+    font-size: 4rem;
+    font-weight: 900;
+}
+
+.container {
+    height: 300px;
+    width: 300px;
+    background-color: green;
 }
